# demonizer

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  .travis.yml.disabled  BezierPath.lua  CMakeLists.txt  CollisionRules.lua  FreeCam.lua  GameActivity.java.in  NPCArcher.lua  NPCKnight.lua  Path.lua  README.md  ShmupAlly.lua  ShmupBullet.lua  ShmupCam.lua  ShmupCollision.lua  ShmupMap.lua  ShmupNPC.lua  ShmupPlayer.lua  archershot.tsx  civmen.tsx  civwomen.tsx  class.lua  conf.lua  configure-android.sh  credits.fods  credits.txt  demonizing.tsx  demonwomen.tsx  download-artifacts.sh  dwoman1.tsx  dwomen.tsx  exportmaps.sh  imp.tsx  impshot.tsx  infmen.tsx  infwomen.tsx  (+17 more)
game/: .gitattributes  02 - Burning Heart.vgm  09 - Blue Sky Laundry.vgm  12 - Typhoone Vol 2.vgm  33 - All Over Tonight.vgm  BezierPath.lua  ButtonRestart.lua  ButtonResume.lua  ButtonTitle.lua  CMakeLists.txt  Curtain.lua  ElectricLayer.lua  GaugeBomb.lua  LavaLayer.lua  LavaPitWall.lua  LinearPath.lua  NPCArcher.lua  NPCFireMage.lua  NPCHero.lua  NPCInquisitor.lua  NPCKnight.lua  NPCMage.lua  NPCPikeman.lua  NPCSwordsman.lua  NavLayer.lua  PauseMenu.lua  ShmupAlly.lua  ShmupBullet.lua  ShmupCam.lua  ShmupCollision.lua  ShmupFriend.lua  ShmupHUD.lua  ShmupMap.lua  ShmupNPC.lua  ShmupPlayer.lua  ShmupScore.lua  ShmupStatus.lua  ShmupTouchControls.lua  ShmupVehicle.lua  ShmupWingman.lua  (+91 more)
game/fnt/: Lady Radical.bmfc  Lady Radical.fnt  Press Start 2P.bmfc  Press Start 2P_8.fnt  Unifont.bmfc  Unifont.fnt  pressstart2p.fnt
game/img/: ballista.tsx  basic_terrain.tsx  bg_swirl.tsx  (+83 more)
(+301 files in other folders)
